--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -105,6 +105,9 @@
     "sstream": "cpp",
     "stdexcept": "cpp",
     "streambuf": "cpp",
-    "typeinfo": "cpp"
+    "typeinfo": "cpp",
+    "cstring": "cpp",
+    "map": "cpp",
+    "set": "cpp"
   }
 }
