pthreads en asteroides (creashea al destruir)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -108,6 +108,7 @@
     "typeinfo": "cpp",
     "cstring": "cpp",
     "map": "cpp",
-    "set": "cpp"
+    "set": "cpp",
+    "list": "cpp"
   }
 }
