se mudo a pthreads y cambios en el estilo del menú, asi como manejo dimanimo de cjugadores y asteroides

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -109,6 +109,17 @@
     "cstring": "cpp",
     "map": "cpp",
     "set": "cpp",
-    "list": "cpp"
+    "list": "cpp",
+    "condition_variable": "cpp",
+    "ratio": "cpp",
+    "mutex": "cpp",
+    "semaphore": "cpp",
+    "stop_token": "cpp",
+    "thread": "cpp",
+    "charconv": "cpp",
+    "chrono": "cpp",
+    "format": "cpp",
+    "span": "cpp",
+    "variant": "cpp"
   }
 }
